# eric

./: .gitattributes  .gitignore  CHANGELOG.md  DOCS.md  LICENSE  README.md  TODO.md  docs.md  eric_sse_class_diagram.mmd  index.html  pyproject.toml  run_tests.sh  update_docs.sh
.github/: code-coverage.yml
.github/workflows/: code-coverage.yml  python-package.yml  static.yml  static2.yml
docs/source/: _docs.rst  changelog.rst  channels.rst  conf.py  devs.rst  docs.rst  entities.rst  index.rst  overview.excalidraw  persistence.rst  prefabs.rst  profiling.rst
docs_html/: .buildinfo  _docs.html  changelog.html  channels.html  devs.html  docs.html  entities.html  exceptions.html  genindex.html  index.html  objects.inv  persistence.html  prefabs.html  profiling.html  py-modindex.html  search.html  searchindex.js
docs_html/_sources/: changelog.rst  changelog.rst.txt  devs.rst  docs.rst  docs.rst.txt  entities.rst  entities.rst.txt  exceptions.rst  index.rst  index.rst.txt  persistence.rst
docs_html/_static/: agogo.css  basic.css  classic.css
docs_markdown/: .buildinfo  changelog.md  channels.md  devs.md  docs.html  docs.md  entities.html  entities.md  exceptions.md  index.md  persistence.md  prefabs.md  profiling.md  py-modindex.html
e2e_tests/: e2e_tests.py
eric/: __init__.py  entities.py  eric.py  exception.py  listeners.py  model.py  servers.py
eric/test/: test_message_manager.py
eric_redis_queues/: README.md  pyproject.toml
eric_redis_queues/eric_redis_queues/: __init__.py
eric_sse/: __init__.py  application.py  benchmark.py  builder.py  channel.py  clients.py  connection.py  entities.py  exception.py  handlers.py  inmemory.py  interfaces.py  listener.py  message.py  patterns.py  persistence.py  prefabs.py  profile.py  queue.py  queues.py  repository.py  serializable.py  servers.py
eric_sse/persistance/: __init__.py
eric_sse/persistence/: __init__.py  redis.py
examples/: __init__.py  benchmarks.py  distributed_app.py  example_client.py  example_producer_consumer.py  example_sender.py  example_server.py  example_watcher.py  inmemory.py  producer_consumer.py  producer_consumer_async.py  producer_consumer_sync.py  profiling.py
examples/sockets/: __init__.py  receiver.py  sender.py  server.py  watcher.py
examples/use_cases/: basic.py
examples/use_cases/complete/: application.py  model.py  repository.py  run_demo.py
persistence/: __init__.py  redis.py
test/: __init__.py  test_application.py  test_builder.py  test_distributed_application_prefab.py  test_entities.py  test_eric.py  test_error_handlers.py  test_inmemory.py  test_patterns.py  test_persistence.py  test_repository.py  test_servers.py  test_sse_channel.py  test_sse_channel_repository.py
test/mock/: channel.py  connection.py  listener.py
