[tool.poetry]
name = "eric-sse"
description = "A lightweight message dispatcher based on SSE protocol data transfer objects format"
version = "0.6.3.13"
authors = ["Luca Stretti <laxertu@gmail.com>"]
keywords = ["sse", "queue", "concurrency"]
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://laxertu.github.io/eric"
Documentation = "https://laxertu.github.io/eric/docs.html"
Repository = "https://github.com/laxertu/eric"
Issues = "https://github.com/laxertu/eric/issues"
Changelog = "https://laxertu.github.io/eric/changelog.html"


[tool.poetry.dependencies]
python = ">= 3.10"
asyncio = ">= 3.4.3"
eric-redis-queues = {version = "^0.0.4", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.poetry.group.doctools]
[tool.poetry.group.doctools.dependencies]
sphinx = "^8.1.1"
sphinx-markdown-builder = "^0.6.7"
sphinx-book-theme = "^1.1.3"

[tool.poetry.extras]
redis-queues = ["eric-redis-queues"]
