[project]
name = "eric-sse"
description = "A lightweight message dispatcher based on SSE protocol data transfer objects format"
requires-python = ">=3.10"
version = "2.1.1.1"
authors = [
    {name = "Luca Stretti", email = "laxertu@gmail.com"}
]
keywords = ["server sent events", "sse", "queue", "concurrency"]
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://laxertu.github.io/eric"
Documentation = "https://laxertu.github.io/eric/docs.html"
Repository = "https://github.com/laxertu/eric"
Issues = "https://github.com/laxertu/eric/issues"
Changelog = "https://laxertu.github.io/eric/changelog.html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.poetry.group.doctools]
[tool.poetry.group.doctools.dependencies]
sphinx = "^8.1.1"
sphinx-markdown-builder = "^0.6.7"
sphinx-book-theme = "^1.1.3"
